# FossTeamAwarenessKit

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md
client/: AndroidManifest.xml  Cargo.toml  README.md
client/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/osm_map/: mod.rs
crypt-lib/: Cargo.toml
crypt-lib/src/: aes.rs  cryptography.rs  error.rs  lib.rs  rsa.rs
crypt-lib/src/cryptography/: aes.rs  rsa.rs
crypt-lib/src/cryptography/aes/: encrypted.rs
crypt-lib/src/cryptography/rsa/: encrypted.rs  public_key.rs
crypt-lib/src/rsa/: public_key.rs  signature.rs
cryptlib/: Cargo.toml
cryptlib/src/: aes.rs  error.rs  key.rs  lib.rs  responses.rs  rsa.rs
cryptlib/src/aes/: aes_decrypt.rs  encrypted.rs  key.rs
cryptlib/src/rsa/: encrypted.rs  key.rs  signature.rs
cryptlib/src/rsa/key/: rsa_public_key.rs  sign_public_key.rs  traits.rs
fosstak/: Cargo.toml  README.md  REQUIREMENTS.md
fosstak-server/: Cargo.toml
fosstak-server/src/: constants.rs  lib.rs  main.rs  response.rs
fosstak_server/: REQUIREMENTS.md
networking-lib/: Cargo.toml
networking-lib/src/: error.rs  lib.rs  net.rs  stream.rs  time.rs
networking-lib/src/net/: stream.rs
networking-lib/src/net/stream/: protocol.rs
networking-lib/src/stream/: bytes.rs  packet.rs  read_half.rs  write_half.rs
networking-lib/src/stream/packet/: actions.rs  packet_trait.rs
server/: Cargo.toml
server/src/: main.rs
