[package]
name = "cryptlib"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.66"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
