[package]
name = "fosstak-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
openssl = "0.10.66"
rand = "0.8.5"
rocket = "0.5.1"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = "1.0.208"
serde_json = "1.0.125"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
