[package]
name = "networking-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.cryptlib]
git = "https://github.com/Marvin-Dziedzina/cryptlib"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
